--- a/style.css
+++ b/style.css
@@ -40,30 +40,25 @@ h1 {
   flex: 1 0 33.33%;
   overflow: hidden;
   position: relative;
+  
+}
+
+.showMole {
+  background:url('mole.png') bottom center no-repeat;
 }
 
 .hole:after {
   display: block;
-  background: url(dirt.svg) bottom center no-repeat;
+  background: url(dirt.png) bottom center no-repeat;
   background-size:contain;
   content:'';
   width: 100%;
-  height:70px;
+  height:56px;
   position: absolute;
   z-index: 2;
-  bottom:-30px;
+  bottom: 0;
 }
 
-.mole {
-  background:url('mole.svg') bottom center no-repeat;
-  background-size:60%;
-  position: absolute;
-  top: 100%;
-  width: 100%;
-  height: 100%;
-  transition:all 0.4s;
-}
-
-.hole.up .mole {
-  top:0;
+.loser {
+  background: #c40f18
 }
